# BE-data-challenge

./: .gitignore  README.MD  TASK.MD  main.py  pyproject.toml  test_utils.py  utils.py  wal.json
